# component-supply-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: watchlist.example.csv
docs/superpowers/plans/: 2026-07-11-component-supply-radar.md  2026-07-12-windows-distribution.md
docs/superpowers/specs/: 2026-07-11-component-supply-radar-design.md  2026-07-12-windows-distribution-design.md
examples/: supplier-observations.csv
openspec/changes/build-future-supply-radar/: .openspec.yaml  design.md  proposal.md  tasks.md
scripts/: common.ps1  install.ps1  install_launchd.sh  install_scheduled_task.ps1  open_latest_report.ps1  run_daily.ps1  scheduled_task_status.ps1  uninstall_launchd.sh  uninstall_scheduled_task.ps1
src/component_supply_radar/: __init__.py  analysis.py  backup.py  cli.py  config.py  exposure.py  models.py  normalization.py  pipeline.py  policy.py  reporting.py  signals.py  storage.py  sync.py  watchlist.py
src/component_supply_radar/providers/: __init__.py  csv_import.py  future.py
src/component_supply_radar/templates/: report.html.j2
tests/: test_backup.py  test_cli_bootstrap.py  test_cli_e2e.py  test_csv_import.py  test_exposure.py  test_future_provider.py  test_launchd_scripts.py  test_license.py  test_models.py  test_pipeline.py  test_policy.py  test_readme_windows.py  test_reporting.py  test_signals.py  test_smoke.py  test_storage.py  test_sync.py  test_watchlist.py  test_windows_scripts.py
tests/fixtures/: future_batch.json
(+5 files in other folders)
