[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "component-supply-radar"
version = "0.1.0"
description = "Local-first electronic component supply pressure research toolkit"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "duckdb>=1.4,<2",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "python-dotenv>=1.0,<2",
  "pytz>=2025.2,<2027",
  "tzdata>=2025.2,<2027; platform_system == 'Windows'",
  "typer>=0.20,<1",
]

[project.scripts]
component-supply-radar = "component_supply_radar.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.18,<2",
  "pytest>=8.4,<10",
  "pytest-httpx>=0.35,<1",
  "ruff>=0.14,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/component_supply_radar"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["component_supply_radar"]
